<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nscc.jonathanprince.assignment2quiz.QuizActivity"
    android:background="#ffffb532">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleQuestion"
        android:id="@+id/titleQuestion"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionNumber"
        android:id="@+id/questionNumber"
        android:layout_toEndOf="@+id/titleQuestion"
        android:layout_marginLeft="8dp"
        android:layout_alignTop="@+id/titleQuestion"
        android:layout_toRightOf="@+id/titleQuestion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnC"
        android:id="@+id/btnC"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="cButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnD"
        android:id="@+id/btnD"
        android:layout_below="@+id/btnC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="dButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnB"
        android:id="@+id/btnB"
        android:layout_above="@+id/btnC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="bButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnA"
        android:layout_above="@+id/btnB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/btnA"
        android:onClick="aButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/currentQuestion"
        android:id="@+id/currentQuestion"
        android:layout_below="@+id/titleQuestion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnA"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtScore"
        android:id="@+id/txtScore"
        android:layout_below="@+id/btnD"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

</RelativeLayout>
